@@ -20,5 +20,6 @@ Contributors:
 #define TIME_MOSQ_H
 
 time_t mosquitto_time(void);
+void mosquitto_time_ns(time_t *s, long *ns);
 
 #endif
